# rust-microservices

./: Cargo.toml  Dockerfile  docker-compose.yaml  setup.sh
auth/: Cargo.toml  setup.sh
auth/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: context.rs  error.rs  lib.rs  services.rs
common/src/auth/: mod.rs
common/src/entity/: audit.rs  audit_request.rs  auditor.rs  customer.rs  mod.rs  project.rs  user.rs
common/src/repository/: http_repository.rs  mod.rs  mongo.rs
user/: Cargo.toml
user/src/: lib.rs
