[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
mongodb = "2.4.0"
tokio = "1.26.0"
axum = "0.6.11"
serde = { version = "1.0.156", features = ["derive"] }
anyhow = "1.0.69"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"