[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.4.0"
anyhow = "1.0.69"
type-map = "0.5.0"
serde = {version = "1.0.156", features = ["derive"]}
reqwest = {version="0.11.14", features=["json"]}
serde_json = "1.0.94"
axum = "0.6.11"
axum-macros = "0.3.6"
tokio = "1.26.0"